// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ClientApp]  ReviewPage (Organisation Commenter) Component should match snapshot when viewing as an organisation commenter (post-submission) 1`] = `
Array [
  Array [
    "",
    "",
    <div
      className="container"
    >
      <div
        className="grid"
      >
        <div
          data-g="12"
        >
          <nav
            aria-label="Breadcrumbs"
          >
            <p
              className="visually-hidden"
            >
              You are here:
            </p>
            <ol
              className="breadcrumbs"
              itemScope={true}
              itemType="http://schema.org/BreadcrumbList"
            >
              <li
                className="breadcrumbs__crumb"
                itemProp="itemListElement"
                itemScope={true}
                itemType="http://schema.org/ListItem"
                onClick={[Function]}
                role="presentation"
              >
                <a
                  href="/"
                  itemProp="item"
                >
                  <span
                    itemProp="name"
                  >
                    Home
                  </span>
                </a>
                <meta
                  content={0}
                  itemProp="position"
                />
              </li>
              <li
                className="breadcrumbs__crumb"
                itemProp="itemListElement"
                itemScope={true}
                itemType="http://schema.org/ListItem"
                onClick={[Function]}
                role="presentation"
              >
                <a
                  href="/guidance/indevelopment/gid-ta10232/consultation/"
                  itemProp="item"
                >
                  <span
                    itemProp="name"
                  >
                    Consultation title
                  </span>
                </a>
                <meta
                  content={1}
                  itemProp="position"
                />
              </li>
              <li
                className="breadcrumbs__crumb"
                itemProp="itemListElement"
                itemScope={true}
                itemType="http://schema.org/ListItem"
                onClick={[Function]}
                role="presentation"
              >
                <a
                  href="/consultations/1/1/introduction"
                  itemProp="item"
                >
                  <span
                    itemProp="name"
                  >
                    Consultation documents
                  </span>
                </a>
                <meta
                  content={2}
                  itemProp="position"
                />
              </li>
            </ol>
          </nav>
          <main>
            <div
              className="page-header"
            >
              Array [
                <h1
                  className="page-header__heading mt--0"
                  data-qa-sel="changeable-page-header"
                >
                  Response submitted
                </h1>,
                <div
                  className="mb--d"
                >
                  <p
                    className="container container-full ml--0"
                  >
                    <span>
                      <span
                        className="tag tag--open"
                      >
                        Open for comments
                      </span>
                       Open until
                       
                      <time
                        dateTime={"2029-05-31T16:00:00.000Z"}
                      >
                        31 May 2029
                      </time>
                    </span>
                      
                  </p>
                </div>,
                "",
                "",
              ]
              <p>
                Your response was submitted 
                to Really Cool Org
                 on 
                <time
                  dateTime={"2019-07-23T12:50:40.704Z"}
                >
                  23 July 2019
                </time>
                .
              </p>
              <h2>
                What happens next?
              </h2>
              <p>
                Really Cool Org
                 will review all the submissions received for this consultation.
              </p>
              <p>
                NICE's response to all the submissions received will be published on the website around the time the final guidance is published.
              </p>
              <hr />
              <div
                className="grid"
              >
                <div
                  className="sticky"
                  data-g="12 md:3"
                >
                  <h2
                    className="h5 mt--0"
                  >
                    Filter
                  </h2>
                  <div
                    className="filter-panel"
                  >
                    <div
                      className="filter-panel__body"
                      id="filter-panel-body"
                    >
                      <div
                        className="filter-group"
                      >
                        <button
                          aria-controls="group-QuestionsOrComments"
                          aria-expanded={true}
                          className="filter-group__heading gtm-topic-list-filter-group-collapse"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            id="group-title-QuestionsOrComments"
                          >
                            Response type
                          </div>
                        </button>
                        <div
                          aria-hidden={false}
                          aria-labelledby="group-title-QuestionsOrComments"
                          className="filter-group__options"
                          id="group-QuestionsOrComments"
                          role="group"
                        >
                          <label
                            className="filter-group__option"
                            htmlFor="filter_QuestionsOrComments_Questions"
                          >
                            <input
                              aria-controls="results-info-count"
                              checked={false}
                              className="gtm-topic-list-filter-select"
                              id="filter_QuestionsOrComments_Questions"
                              name="QuestionsOrComments"
                              onChange={[Function]}
                              title="Response type - Questions"
                              type="checkbox"
                              value="Questions"
                            />
                            Questions
                          </label>
                          <label
                            className="filter-group__option"
                            htmlFor="filter_QuestionsOrComments_Comments"
                          >
                            <input
                              aria-controls="results-info-count"
                              checked={false}
                              className="gtm-topic-list-filter-select"
                              id="filter_QuestionsOrComments_Comments"
                              name="QuestionsOrComments"
                              onChange={[Function]}
                              title="Response type - Comments"
                              type="checkbox"
                              value="Comments"
                            />
                            Comments
                          </label>
                        </div>
                      </div>
                      <div
                        className="filter-group"
                      >
                        <button
                          aria-controls="group-Document"
                          aria-expanded={true}
                          className="filter-group__heading gtm-topic-list-filter-group-collapse"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            id="group-title-Document"
                          >
                            Document
                          </div>
                        </button>
                        <div
                          aria-hidden={false}
                          aria-labelledby="group-title-Document"
                          className="filter-group__options"
                          id="group-Document"
                          role="group"
                        >
                          <label
                            className="filter-group__option"
                            htmlFor="filter_Document_1"
                          >
                            <input
                              aria-controls="results-info-count"
                              checked={false}
                              className="gtm-topic-list-filter-select"
                              id="filter_Document_1"
                              name="Document"
                              onChange={[Function]}
                              title="Document - Unstable angina and NSTEMI"
                              type="checkbox"
                              value="1"
                            />
                            Unstable angina and NSTEMI
                          </label>
                          <label
                            className="filter-group__option"
                            htmlFor="filter_Document_2"
                          >
                            <input
                              aria-controls="results-info-count"
                              checked={false}
                              className="gtm-topic-list-filter-select"
                              id="filter_Document_2"
                              name="Document"
                              onChange={[Function]}
                              title="Document - Glaucoma: diagnosis and management – Full Guideline"
                              type="checkbox"
                              value="2"
                            />
                            Glaucoma: diagnosis and management – Full Guideline
                          </label>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  data-g="12 md:9"
                >
                  <div
                    className="results-info"
                  >
                    <h2
                      className="results-info__count"
                      id="results-info-count"
                    >
                      <span>
                        Showing 3 questions and 2 comments
                      </span>
                    </h2>
                  </div>
                  <div
                    data-qa-sel="comment-list-wrapper"
                  >
                    <div>
                      <ul
                        className="CommentList list--unstyled"
                      >
                        <li
                          className="CommentBox"
                        >
                          <h4
                            className="CommentBox__title mt--0 mb--0"
                            data-qa-sel="comment-box-title"
                          >
                            Question on 
                            <span
                              className="text-lowercase"
                            >
                              Consultation
                            </span>
                          </h4>
                          <div
                            className="font-weight-bold markdown mt--d mb--d"
                          >
                            Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
                          </div>
                          <section
                            role="form"
                          >
                            <form
                              className="mb--0 mt--e"
                              onSubmit={[Function]}
                            >
                              <div
                                className="form__group form__group--textarea mb--b"
                              >
                                <label
                                  className="form__label visually-hidden"
                                  htmlFor="Answer11"
                                >
                                  Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
                                </label>
                                <textarea
                                  className="form__input form__input--textarea"
                                  data-hj-whitelist={true}
                                  data-qa-sel="Comment-text-area"
                                  defaultValue="gg"
                                  disabled={true}
                                  id="Answer11"
                                  onInput={[Function]}
                                />
                              </div>
                            </form>
                          </section>
                        </li>
                        <li
                          className="CommentBox"
                        >
                          <h3
                            className="CommentBox__title mt--0 mb--0"
                          >
                            Unstable angina and NSTEMI
                          </h3>
                          <h4
                            className="CommentBox__title mt--0 mb--0"
                            data-qa-sel="comment-box-title"
                          >
                            Question on 
                            <span
                              className="text-lowercase"
                            >
                              Document
                            </span>
                          </h4>
                          <div
                            className="font-weight-bold markdown mt--d mb--d"
                          >
                            Would implementation of any of the draft recommendations have significant cost implications?
                          </div>
                          <section
                            role="form"
                          >
                            <form
                              className="mb--0 mt--e"
                              onSubmit={[Function]}
                            >
                              <div
                                className="form__group form__group--textarea mb--b"
                              >
                                <label
                                  className="form__label visually-hidden"
                                  htmlFor="Answer-1"
                                >
                                  Would implementation of any of the draft recommendations have significant cost implications?
                                </label>
                                <textarea
                                  className="form__input form__input--textarea"
                                  data-hj-whitelist={true}
                                  data-qa-sel="Comment-text-area"
                                  disabled={true}
                                  id="Answer-1"
                                  onInput={[Function]}
                                />
                              </div>
                            </form>
                          </section>
                        </li>
                        <li
                          className="CommentBox"
                        >
                          <h3
                            className="CommentBox__title mt--0 mb--0"
                          >
                            Glaucoma: diagnosis and management – Full Guideline
                          </h3>
                          <h4
                            className="CommentBox__title mt--0 mb--0"
                            data-qa-sel="comment-box-title"
                          >
                            Question on 
                            <span
                              className="text-lowercase"
                            >
                              Document
                            </span>
                          </h4>
                          <div
                            className="font-weight-bold markdown mt--d mb--d"
                          >
                            Would implementation of any of the draft recommendations have cost implications?
                          </div>
                          <section
                            role="form"
                          >
                            <form
                              className="mb--0 mt--e"
                              onSubmit={[Function]}
                            >
                              <div
                                className="form__group form__group--textarea mb--b"
                              >
                                <label
                                  className="form__label visually-hidden"
                                  htmlFor="Answer-1"
                                >
                                  Would implementation of any of the draft recommendations have cost implications?
                                </label>
                                <textarea
                                  className="form__input form__input--textarea"
                                  data-hj-whitelist={true}
                                  data-qa-sel="Comment-text-area"
                                  disabled={true}
                                  id="Answer-1"
                                  onInput={[Function]}
                                />
                              </div>
                            </form>
                          </section>
                        </li>
                      </ul>
                    </div>
                    <ul
                      className="CommentList list--unstyled"
                    >
                      <li
                        className="CommentBox"
                      >
                        <section
                          role="form"
                        >
                          <h1
                            className="CommentBox__title mv--0"
                          >
                            Unstable angina and NSTEMI
                          </h1>
                          <h3
                            className="CommentBox__title mt--0 mb--d"
                            data-qa-sel="comment-box-title"
                          >
                            Comment on 
                            <span
                              className="text-lowercase"
                            >
                              Document
                            </span>
                          </h3>
                          <form
                            className="mb--0"
                            onSubmit={[Function]}
                          >
                            <div
                              className="form__group form__group--textarea mb--b"
                            >
                              <label
                                className="form__label visually-hidden"
                                htmlFor="Comment5"
                              >
                                Comment on 
                                Document
                                , 
                                Unstable angina and NSTEMI
                              </label>
                              <textarea
                                className="form__input form__input--textarea"
                                data-hj-whitelist={true}
                                data-qa-sel="Comment-text-area"
                                defaultValue="ffffc"
                                disabled={true}
                                id="Comment5"
                                onInput={[Function]}
                                tabIndex={0}
                              />
                            </div>
                          </form>
                        </section>
                      </li>
                      <li
                        className="CommentBox"
                      >
                        <section
                          role="form"
                        >
                          <h1
                            className="CommentBox__title mv--0"
                          >
                            Unstable angina and NSTEMI
                          </h1>
                          <h3
                            className="CommentBox__title mt--0 mb--d"
                            data-qa-sel="comment-box-title"
                          >
                            Comment on 
                            <span
                              className="text-lowercase"
                            >
                              Chapter
                            </span>
                            <span>
                               - "
                              Introduction
                              "
                            </span>
                          </h3>
                          <form
                            className="mb--0"
                            onSubmit={[Function]}
                          >
                            <div
                              className="form__group form__group--textarea mb--b"
                            >
                              <label
                                className="form__label visually-hidden"
                                htmlFor="Comment7"
                              >
                                Comment on 
                                Chapter
                                , 
                                Introduction 
                              </label>
                              <textarea
                                className="form__input form__input--textarea"
                                data-hj-whitelist={true}
                                data-qa-sel="Comment-text-area"
                                defaultValue="ffff"
                                disabled={true}
                                id="Comment7"
                                onInput={[Function]}
                                tabIndex={0}
                              />
                            </div>
                          </form>
                        </section>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </main>
        </div>
      </div>
    </div>,
  ],
  <div>
    <div
      aria-live="assertive"
      role="log"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    />
    <div
      aria-live="assertive"
      role="log"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    />
    <div
      aria-live="polite"
      role="log"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      Showing 3 questions and 2 comments
    </div>
    <div
      aria-live="polite"
      role="log"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    />
  </div>,
]
`;

exports[`[ClientApp]  ReviewPage (Organisation Commenter) Component should match snapshot when viewing as an organisation commenter (pre-submission) 1`] = `
Array [
  Array [
    "",
    "",
    <div
      className="container"
    >
      <div
        className="grid"
      >
        <div
          data-g="12"
        >
          <nav
            aria-label="Breadcrumbs"
          >
            <p
              className="visually-hidden"
            >
              You are here:
            </p>
            <ol
              className="breadcrumbs"
              itemScope={true}
              itemType="http://schema.org/BreadcrumbList"
            >
              <li
                className="breadcrumbs__crumb"
                itemProp="itemListElement"
                itemScope={true}
                itemType="http://schema.org/ListItem"
                onClick={[Function]}
                role="presentation"
              >
                <a
                  href="/"
                  itemProp="item"
                >
                  <span
                    itemProp="name"
                  >
                    Home
                  </span>
                </a>
                <meta
                  content={0}
                  itemProp="position"
                />
              </li>
              <li
                className="breadcrumbs__crumb"
                itemProp="itemListElement"
                itemScope={true}
                itemType="http://schema.org/ListItem"
                onClick={[Function]}
                role="presentation"
              >
                <a
                  href="/guidance/indevelopment/gid-ta10232/consultation/"
                  itemProp="item"
                >
                  <span
                    itemProp="name"
                  >
                    Consultation title
                  </span>
                </a>
                <meta
                  content={1}
                  itemProp="position"
                />
              </li>
              <li
                className="breadcrumbs__crumb"
                itemProp="itemListElement"
                itemScope={true}
                itemType="http://schema.org/ListItem"
                onClick={[Function]}
                role="presentation"
              >
                <a
                  href="/consultations/1/1/introduction"
                  itemProp="item"
                >
                  <span
                    itemProp="name"
                  >
                    Consultation documents
                  </span>
                </a>
                <meta
                  content={2}
                  itemProp="position"
                />
              </li>
            </ol>
          </nav>
          <main>
            <div
              className="page-header"
            >
              Array [
                <h1
                  className="page-header__heading mt--0"
                  data-qa-sel="changeable-page-header"
                >
                  Review your response
                </h1>,
                <div
                  className="mb--d"
                >
                  <p
                    className="container container-full ml--0"
                  >
                    <span>
                      <span
                        className="tag tag--open"
                      >
                        Open for comments
                      </span>
                       Open until
                       
                      <time
                        dateTime={"2029-05-31T16:00:00.000Z"}
                      >
                        31 May 2029
                      </time>
                    </span>
                      
                  </p>
                </div>,
                <p>
                  On this page you can review and edit your response to the consultation before you send them to Really Cool Org.
                </p>,
                <p>
                  Once you have sent your response you will not be able to edit it or add any more comments.
                </p>,
              ]
              <div
                className="grid"
              >
                <div
                  className="sticky"
                  data-g="12 md:3"
                >
                  <h2
                    className="h5 mt--0"
                  >
                    Filter
                  </h2>
                  <div
                    className="filter-panel"
                  >
                    <div
                      className="filter-panel__body"
                      id="filter-panel-body"
                    >
                      <div
                        className="filter-group"
                      >
                        <button
                          aria-controls="group-QuestionsOrComments"
                          aria-expanded={true}
                          className="filter-group__heading gtm-topic-list-filter-group-collapse"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            id="group-title-QuestionsOrComments"
                          >
                            Response type
                          </div>
                        </button>
                        <div
                          aria-hidden={false}
                          aria-labelledby="group-title-QuestionsOrComments"
                          className="filter-group__options"
                          id="group-QuestionsOrComments"
                          role="group"
                        >
                          <label
                            className="filter-group__option"
                            htmlFor="filter_QuestionsOrComments_Questions"
                          >
                            <input
                              aria-controls="results-info-count"
                              checked={false}
                              className="gtm-topic-list-filter-select"
                              id="filter_QuestionsOrComments_Questions"
                              name="QuestionsOrComments"
                              onChange={[Function]}
                              title="Response type - Questions"
                              type="checkbox"
                              value="Questions"
                            />
                            Questions
                          </label>
                          <label
                            className="filter-group__option"
                            htmlFor="filter_QuestionsOrComments_Comments"
                          >
                            <input
                              aria-controls="results-info-count"
                              checked={false}
                              className="gtm-topic-list-filter-select"
                              id="filter_QuestionsOrComments_Comments"
                              name="QuestionsOrComments"
                              onChange={[Function]}
                              title="Response type - Comments"
                              type="checkbox"
                              value="Comments"
                            />
                            Comments
                          </label>
                        </div>
                      </div>
                      <div
                        className="filter-group"
                      >
                        <button
                          aria-controls="group-Document"
                          aria-expanded={true}
                          className="filter-group__heading gtm-topic-list-filter-group-collapse"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            id="group-title-Document"
                          >
                            Document
                          </div>
                        </button>
                        <div
                          aria-hidden={false}
                          aria-labelledby="group-title-Document"
                          className="filter-group__options"
                          id="group-Document"
                          role="group"
                        >
                          <label
                            className="filter-group__option"
                            htmlFor="filter_Document_1"
                          >
                            <input
                              aria-controls="results-info-count"
                              checked={false}
                              className="gtm-topic-list-filter-select"
                              id="filter_Document_1"
                              name="Document"
                              onChange={[Function]}
                              title="Document - Unstable angina and NSTEMI"
                              type="checkbox"
                              value="1"
                            />
                            Unstable angina and NSTEMI
                          </label>
                          <label
                            className="filter-group__option"
                            htmlFor="filter_Document_2"
                          >
                            <input
                              aria-controls="results-info-count"
                              checked={false}
                              className="gtm-topic-list-filter-select"
                              id="filter_Document_2"
                              name="Document"
                              onChange={[Function]}
                              title="Document - Glaucoma: diagnosis and management – Full Guideline"
                              type="checkbox"
                              value="2"
                            />
                            Glaucoma: diagnosis and management – Full Guideline
                          </label>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  data-g="12 md:9"
                >
                  <div
                    className="results-info"
                  >
                    <h2
                      className="results-info__count"
                      id="results-info-count"
                    >
                      <span>
                        Showing 3 questions and 2 comments
                      </span>
                    </h2>
                  </div>
                  <div
                    data-qa-sel="comment-list-wrapper"
                  >
                    <div>
                      <ul
                        className="CommentList list--unstyled"
                      >
                        <li
                          className="CommentBox"
                        >
                          <h4
                            className="CommentBox__title mt--0 mb--0"
                            data-qa-sel="comment-box-title"
                          >
                            Question on 
                            <span
                              className="text-lowercase"
                            >
                              Consultation
                            </span>
                          </h4>
                          <div
                            className="font-weight-bold markdown mt--d mb--d"
                          >
                            Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
                          </div>
                          <section
                            role="form"
                          >
                            <form
                              className="mb--0 mt--e"
                              onSubmit={[Function]}
                            >
                              <div
                                className="form__group form__group--textarea mb--b"
                              >
                                <label
                                  className="form__label visually-hidden"
                                  htmlFor="Answer11"
                                >
                                  Which areas will have the biggest impact on practice and be challenging to implement? Please say for whom and why.
                                </label>
                                <textarea
                                  className="form__input form__input--textarea"
                                  data-hj-whitelist={true}
                                  data-qa-sel="Comment-text-area"
                                  defaultValue="gg"
                                  disabled={null}
                                  id="Answer11"
                                  onInput={[Function]}
                                />
                              </div>
                              <span
                                className="ml--0 mb--0 CommentBox__savedIndicator"
                              >
                                Saved
                              </span>
                              <button
                                className="btn mr--0 mb--0 right"
                                data-qa-sel="delete-comment-button"
                                onClick={[Function]}
                              >
                                Delete
                              </button>
                            </form>
                          </section>
                        </li>
                        <li
                          className="CommentBox"
                        >
                          <h3
                            className="CommentBox__title mt--0 mb--0"
                          >
                            Unstable angina and NSTEMI
                          </h3>
                          <h4
                            className="CommentBox__title mt--0 mb--0"
                            data-qa-sel="comment-box-title"
                          >
                            Question on 
                            <span
                              className="text-lowercase"
                            >
                              Document
                            </span>
                          </h4>
                          <div
                            className="font-weight-bold markdown mt--d mb--d"
                          >
                            Would implementation of any of the draft recommendations have significant cost implications?
                          </div>
                          <section
                            role="form"
                          >
                            <form
                              className="mb--0 mt--e"
                              onSubmit={[Function]}
                            >
                              <div
                                className="form__group form__group--textarea mb--b"
                              >
                                <label
                                  className="form__label visually-hidden"
                                  htmlFor="Answer-1"
                                >
                                  Would implementation of any of the draft recommendations have significant cost implications?
                                </label>
                                <textarea
                                  className="form__input form__input--textarea"
                                  data-hj-whitelist={true}
                                  data-qa-sel="Comment-text-area"
                                  disabled={null}
                                  id="Answer-1"
                                  onInput={[Function]}
                                />
                              </div>
                            </form>
                          </section>
                        </li>
                        <li
                          className="CommentBox"
                        >
                          <h3
                            className="CommentBox__title mt--0 mb--0"
                          >
                            Glaucoma: diagnosis and management – Full Guideline
                          </h3>
                          <h4
                            className="CommentBox__title mt--0 mb--0"
                            data-qa-sel="comment-box-title"
                          >
                            Question on 
                            <span
                              className="text-lowercase"
                            >
                              Document
                            </span>
                          </h4>
                          <div
                            className="font-weight-bold markdown mt--d mb--d"
                          >
                            Would implementation of any of the draft recommendations have cost implications?
                          </div>
                          <section
                            role="form"
                          >
                            <form
                              className="mb--0 mt--e"
                              onSubmit={[Function]}
                            >
                              <div
                                className="form__group form__group--textarea mb--b"
                              >
                                <label
                                  className="form__label visually-hidden"
                                  htmlFor="Answer-1"
                                >
                                  Would implementation of any of the draft recommendations have cost implications?
                                </label>
                                <textarea
                                  className="form__input form__input--textarea"
                                  data-hj-whitelist={true}
                                  data-qa-sel="Comment-text-area"
                                  disabled={null}
                                  id="Answer-1"
                                  onInput={[Function]}
                                />
                              </div>
                            </form>
                          </section>
                        </li>
                      </ul>
                    </div>
                    <ul
                      className="CommentList list--unstyled"
                    >
                      <li
                        className="CommentBox"
                      >
                        <section
                          role="form"
                        >
                          <h1
                            className="CommentBox__title mv--0"
                          >
                            Unstable angina and NSTEMI
                          </h1>
                          <h3
                            className="CommentBox__title mt--0 mb--d"
                            data-qa-sel="comment-box-title"
                          >
                            Comment on 
                            <span
                              className="text-lowercase"
                            >
                              Document
                            </span>
                          </h3>
                          <form
                            className="mb--0"
                            onSubmit={[Function]}
                          >
                            <div
                              className="form__group form__group--textarea mb--b"
                            >
                              <label
                                className="form__label visually-hidden"
                                htmlFor="Comment5"
                              >
                                Comment on 
                                Document
                                , 
                                Unstable angina and NSTEMI
                              </label>
                              <textarea
                                className="form__input form__input--textarea"
                                data-hj-whitelist={true}
                                data-qa-sel="Comment-text-area"
                                defaultValue="ffffc"
                                disabled={null}
                                id="Comment5"
                                onInput={[Function]}
                                tabIndex={0}
                              />
                            </div>
                            <span
                              className="ml--0 mb--0 CommentBox__savedIndicator"
                            >
                              Saved
                            </span>
                            <button
                              className="btn mr--0 mb--0 right"
                              data-qa-sel="delete-comment-button"
                              onClick={[Function]}
                            >
                              Delete
                            </button>
                          </form>
                        </section>
                      </li>
                      <li
                        className="CommentBox"
                      >
                        <section
                          role="form"
                        >
                          <h1
                            className="CommentBox__title mv--0"
                          >
                            Unstable angina and NSTEMI
                          </h1>
                          <h3
                            className="CommentBox__title mt--0 mb--d"
                            data-qa-sel="comment-box-title"
                          >
                            Comment on 
                            <span
                              className="text-lowercase"
                            >
                              Chapter
                            </span>
                            <span>
                               - "
                              Introduction
                              "
                            </span>
                          </h3>
                          <form
                            className="mb--0"
                            onSubmit={[Function]}
                          >
                            <div
                              className="form__group form__group--textarea mb--b"
                            >
                              <label
                                className="form__label visually-hidden"
                                htmlFor="Comment7"
                              >
                                Comment on 
                                Chapter
                                , 
                                Introduction 
                              </label>
                              <textarea
                                className="form__input form__input--textarea"
                                data-hj-whitelist={true}
                                data-qa-sel="Comment-text-area"
                                defaultValue="ffff"
                                disabled={null}
                                id="Comment7"
                                onInput={[Function]}
                                tabIndex={0}
                              />
                            </div>
                            <span
                              className="ml--0 mb--0 CommentBox__savedIndicator"
                            >
                              Saved
                            </span>
                            <button
                              className="btn mr--0 mb--0 right"
                              data-qa-sel="delete-comment-button"
                              onClick={[Function]}
                            >
                              Delete
                            </button>
                          </form>
                        </section>
                      </li>
                    </ul>
                  </div>
                  <div
                    className="panel"
                  >
                    <h2>
                      You are about to send your final response to 
                      Really Cool Org
                    </h2>
                    <p>
                      Enter your email address so that your organisation can contact you about your comments if they have any questions.
                    </p>
                    <div
                      className="input"
                    >
                      <label
                        className="input__label"
                        htmlFor="emailAddress"
                      >
                        Email address
                      </label>
                      <input
                        className="input__input"
                        id="emailAddress"
                        name="emailAddress"
                        onChange={[Function]}
                        placeholder="eg: your.name@example.com..."
                        required={true}
                        type="email"
                      />
                    </div>
                    <p>
                      Once you have sent your response you will not be able to edit it or add any more comments.
                    </p>
                    <button
                      className="btn btn--cta"
                      onClick={[Function]}
                    >
                      Send your response to your organisation
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </main>
        </div>
      </div>
    </div>,
  ],
  <div>
    <div
      aria-live="assertive"
      role="log"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    />
    <div
      aria-live="assertive"
      role="log"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    />
    <div
      aria-live="polite"
      role="log"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    >
      Showing 3 questions and 2 comments
    </div>
    <div
      aria-live="polite"
      role="log"
      style={
        Object {
          "border": 0,
          "clip": "rect(0 0 0 0)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
    />
  </div>,
]
`;
